src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-omT-ofT-dwF1000-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\nopen floating: true\ndefault column width: F1000\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1000 × 0, bounds: 1272 × 712, states: []
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
